--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout-large/activity_anticipo_tabla.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout-large/activity_anticipo_tabla.xml
@@ -69,7 +69,7 @@
 
             <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="fill_parent"
-                android:layout_height="400dp"
+                android:layout_height="330dp"
                 android:scrollbars="vertical"
                 tools:ignore="NestedScrolling">
 
@@ -94,6 +94,25 @@
             <TableLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
+
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <TextView
+                        android:id="@+id/textView20"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="@string/recibi_de"
+                        android:textSize="24sp" />
+
+                    <Spinner
+                        android:id="@+id/SPAnticipoTablaActvityUsuario"
+                        android:layout_width="match_parent"
+                        android:layout_weight="1"
+                        android:layout_height="wrap_content" />
+                </TableRow>
 
                 <TableRow
                     android:layout_width="match_parent"
