--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_anticipo_tabla.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_anticipo_tabla.xml
@@ -67,7 +67,7 @@
 
             <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="fill_parent"
-                android:layout_height="185sp"
+                android:layout_height="156sp"
                 android:scrollbars="vertical"
                 tools:ignore="NestedScrolling">
 
@@ -95,6 +95,25 @@
 
                 <TableRow
                     android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <TextView
+                        android:id="@+id/textView20"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="@string/recibi_de"
+                        android:textSize="18sp" />
+
+                    <Spinner
+                        android:id="@+id/SPAnticipoTablaActvityUsuario"
+                        android:layout_width="20sp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="2" />
+                </TableRow>
+
+                <TableRow
+                    android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:paddingTop="10dp"
                     android:paddingBottom="10dp">
@@ -114,10 +133,10 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
+                        android:gravity="end"
                         android:text="@string/total"
                         android:textAlignment="textEnd"
-                        android:textSize="18sp"
-                        android:gravity="end" />
+                        android:textSize="18sp" />
 
                     <TextView
                         android:id="@+id/TVAnticipoTablaActivityTotal"
@@ -127,7 +146,8 @@
                         android:text=""
                         android:textAlignment="textEnd"
                         android:textSize="18sp"
-                        android:textStyle="bold" />
+                        android:textStyle="bold"
+                        android:gravity="end" />
                 </TableRow>
 
                 <TableRow
