CJAL-14/12/2018-MODULO CALL CENTER

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Pedidos/Index.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Pedidos/Index.cshtml
@@ -106,7 +106,7 @@
                                                     foreach (var item in Model.Pedidos)
                                                     {
                                                         <tr>
-                                                            <th>@item.NumPedido</th>
+                                                            <th>@item.IdPedido</th>
                                                             <th>@item.Rfc</th>
                                                             <td>@item.Nombre @item.Apellido1 @item.Apellido2 </td>
                                                             <td>@item.Cantidad</td>
