CJAL-19/12/2018- Avance Modulo Call center-pedidos

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Pedidos/Index.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Pedidos/Index.cshtml
@@ -108,7 +108,7 @@
                                                         <tr>
                                                             <th>@item.IdPedido</th>
                                                             <th>@item.Rfc</th>
-                                                            <td>@item.Nombre @item.Apellido1 @item.Apellido2 </td>
+                                                            <td>@item.NombreRfc</td>
                                                             <td>@item.Cantidad</td>
                                                             <td>@item.EstatusPedido</td>
                                                             <td>
