--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Pedidos/Nuevo.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Pedidos/Nuevo.cshtml
@@ -109,7 +109,7 @@
                                                         <span class="input-group-addon">
                                                             <i class="zmdi zmdi-calendar"></i>
                                                         </span>
-                                                        <input type="text" name="FechaEntregaPedido" class="form-control date" placeholder="formato: dd/mm/aaaa" />
+                                                        <input type="text" name="FechaEntregaPedido" class="form-control" placeholder="formato: dd/mm/aaaa" />
                                                     </div>
                                                 </div>
                                             </div>
