--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout-large/activity_venta_gas.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout-large/activity_venta_gas.xml
@@ -40,6 +40,7 @@
         <Button
             android:id="@+id/BtnVentaGasActivityGasLp"
             style="@style/SagasTheme.Button"
+            android:background="@drawable/ripple_effect"
             android:layout_width="200sp"
             android:layout_height="99sp"
             android:layout_marginStart="16dp"
@@ -54,7 +55,8 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/TVVentaGasActivityTitulo"
             app:layout_row="2"
-            tools:ignore="UnusedAttribute" />
+            tools:ignore="UnusedAttribute"
+            android:layout_marginLeft="16dp" />
 
         <Button
             android:id="@+id/BtnVentaGasActivtiyCilindroConGas"
@@ -72,7 +74,8 @@
             android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/TVVentaGasActivityTitulo"
-            tools:ignore="UnusedAttribute" />
+            tools:ignore="UnusedAttribute"
+            android:layout_marginRight="16dp" />
 
         <Button
             android:id="@+id/BtnVentaGasActivityCilindro"
