--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/punto_venta_item.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/punto_venta_item.xml
@@ -27,6 +27,10 @@
                 android:id="@+id/PuntoVentaGasListaActivityCantidadExistencia"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="2sp"
+                android:layout_marginLeft="2sp"
+                android:layout_marginBottom="5sp"
+                android:padding="2sp"
                 android:textSize="18sp"
                 app:layout_column="1"
                 app:layout_gravity="fill"
@@ -36,12 +40,15 @@
                 android:id="@+id/PuntoVentaGasListActivityExistencia"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="5sp"
+                android:layout_marginTop="5sp"
                 android:text="@string/existencia"
                 android:textAlignment="center"
                 android:textSize="14sp"
                 app:layout_column="0"
                 app:layout_gravity="fill"
-                app:layout_row="2" />
+                app:layout_row="2"
+                android:layout_marginStart="5sp" />
 
             <EditText
                 android:id="@+id/ETPuntoVentaGasListActivityCantidad"
