--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_punto_venta_pagar.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_punto_venta_pagar.xml
@@ -52,13 +52,13 @@
                 android:id="@+id/textView24"
                 android:layout_width="wrap_content"
                 android:layout_height="24dp"
-                android:layout_marginStart="108dp"
+                android:layout_marginStart="128dp"
+                android:layout_marginLeft="128dp"
                 android:layout_marginTop="8dp"
                 android:text="@string/subtotal"
                 android:textSize="18sp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/scrollView4"
-                android:layout_marginLeft="108dp" />
+                app:layout_constraintTop_toBottomOf="@+id/scrollView4" />
 
             <TextView
                 android:id="@+id/TVPuntoVentaPagarActivitySubtotal"
@@ -95,7 +95,7 @@
                 android:text="@string/total"
                 android:textSize="18sp"
                 app:layout_constraintEnd_toStartOf="@+id/TVPuntoVentaActivityPagarTotal"
-                app:layout_constraintHorizontal_bias="0.569"
+                app:layout_constraintHorizontal_bias="0.551"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView28" />
 
@@ -189,7 +189,6 @@
                 style="@style/SagasTheme.Button"
                 android:layout_width="94dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="57dp"
                 android:background="@drawable/ripple_effect"
                 android:text="@string/opciones"
                 android:textColor="@color/colorTextButtonLogin"
@@ -197,7 +196,6 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/BtnPuntoVentaPagarActivityCancelar"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/SPuntoVentaPagarActivityFactura"
                 tools:ignore="UnusedAttribute" />
 
             <Button
@@ -220,10 +218,9 @@
 
             <Button
                 android:id="@+id/BtnPuntoVentaPagarActivityConfirmar"
+                style="@style/SagasTheme.Button"
                 android:layout_width="105dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                style="@style/SagasTheme.Button"
                 android:background="@drawable/ripple_effect"
                 android:text="@string/confirmar"
                 android:textColor="@color/colorTextButtonLogin"
@@ -231,8 +228,6 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/BtnPuntoVentaPagarActivityCancelar"
-                app:layout_constraintTop_toBottomOf="@+id/textView32"
-                app:layout_constraintVertical_bias="1.0"
                 tools:ignore="UnusedAttribute" />
 
             <TextView
@@ -246,10 +241,12 @@
                 android:layout_marginRight="8dp"
                 android:layout_marginBottom="8dp"
                 android:text="@string/total_en_efectivo"
-                app:layout_constraintBottom_toTopOf="@+id/BtnPuntoVentaPagarActivityOpciones"
+                app:layout_constraintBottom_toTopOf="@+id/BtnPuntoVentaPagarActivityCancelar"
                 app:layout_constraintEnd_toStartOf="@+id/ETPuntoVentaPagarActivityEfectivo"
+                app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/SPuntoVentaPagarActivityFactura" />
+                app:layout_constraintTop_toBottomOf="@+id/textView30"
+                app:layout_constraintVertical_bias="0.784" />
             <!--android:backgroundTint="@color/colorButtonLogin"-->
 
         </android.support.constraint.ConstraintLayout>
